<resources>
    <string name="app_name">BigHandTest</string>
    <string name="your_shopping_list_has_no_items.">You shopping list has no items.</string>
    <string name="ok">OK</string>
    <string name="share_using">Share using</string>
    <string name="share_shopping_item_message" formatted="false">Hey there! I have added the following item in my shopping list.\n\nProduct: %s\nBrand: %s\nBarcode/ID: %s</string>
    <string name="my_shopping_item">My shopping item</string>
    <string name="barcode">Barcode</string>
    <string name="brand2">Brand:</string>
    <string name="quantity2">Quantity:</string>
    <string name="price2">Price:</string>
    <string name="brand">Brand</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="bighand_test_app">BigHand Test App</string>
    <string name="feature_not_implemented">Feature not implemented</string>
    <string name="delete">Delete</string>
    <string name="no_item_selected">No item selected</string>
    <string name="product_description">Product Description</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_item">Edit Item</string>
    <string name="item_updated_successfully">Item updated successfully</string>


</resources>
